; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_h8300_timer16.c_timer16_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_h8300_timer16.c_timer16_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clocksource = type { i32 }
%struct.timer16_priv = type { i32, i64, i32, i32 }

@TISRC = common dso_local global i64 0, align 8
@TSTR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.clocksource*)* @timer16_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer16_disable(%struct.clocksource* %0) #0 {
  %2 = alloca %struct.clocksource*, align 8
  %3 = alloca %struct.timer16_priv*, align 8
  store %struct.clocksource* %0, %struct.clocksource** %2, align 8
  %4 = load %struct.clocksource*, %struct.clocksource** %2, align 8
  %5 = call %struct.timer16_priv* @cs_to_priv(%struct.clocksource* %4)
  store %struct.timer16_priv* %5, %struct.timer16_priv** %3, align 8
  %6 = load %struct.timer16_priv*, %struct.timer16_priv** %3, align 8
  %7 = getelementptr inbounds %struct.timer16_priv, %struct.timer16_priv* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @WARN_ON(i32 %11)
  %13 = load %struct.timer16_priv*, %struct.timer16_priv** %3, align 8
  %14 = getelementptr inbounds %struct.timer16_priv, %struct.timer16_priv* %13, i32 0, i32 3
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.timer16_priv*, %struct.timer16_priv** %3, align 8
  %17 = getelementptr inbounds %struct.timer16_priv, %struct.timer16_priv* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @TISRC, align 8
  %20 = add nsw i64 %18, %19
  %21 = call i32 @bclr(i32 %15, i64 %20)
  %22 = load %struct.timer16_priv*, %struct.timer16_priv** %3, align 8
  %23 = getelementptr inbounds %struct.timer16_priv, %struct.timer16_priv* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 8
  %25 = load %struct.timer16_priv*, %struct.timer16_priv** %3, align 8
  %26 = getelementptr inbounds %struct.timer16_priv, %struct.timer16_priv* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @TSTR, align 8
  %29 = add nsw i64 %27, %28
  %30 = call i32 @bclr(i32 %24, i64 %29)
  %31 = load %struct.timer16_priv*, %struct.timer16_priv** %3, align 8
  %32 = getelementptr inbounds %struct.timer16_priv, %struct.timer16_priv* %31, i32 0, i32 0
  store i32 0, i32* %32, align 8
  ret void
}

declare dso_local %struct.timer16_priv* @cs_to_priv(%struct.clocksource*) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @bclr(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
